trying a new .env package

--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
     "author": "Stein Inge Morisbak",
     "license": "MIT",
     "main": "pages/Badetass.tsx",
-    "dependencies": {},
+    "dependencies": {
+        "babel-plugin-dotenv-import": "^2.1.0"
+    },
     "plugin": {
         "name": "Badetassen",
         "icon": "",
         "description": "Vis badetemperaturer fra badetassen.no"
     },
-    "devDependencies": {
-        "metro-react-native-babel-preset": "^0.60.0",
-        "react-native-dotenv": "^0.2.0"
-    }
+    "devDependencies": {}
 }
