--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "author": "Stein Inge Morisbak",
     "license": "MIT",
     "main": "pages/Badetass.tsx",
-    "dependencies": {},
+    "dependencies": {
+        "react-native-dropdown-picker": "^3.0.5"
+    },
     "plugin": {
         "name": "Badetassen",
         "icon": "",
