--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "main": "pages/Badetass.tsx",
     "repository": "git@github.com:steinim/hk-badetass-plugin.git",
     "dependencies": {
+        "geolib": "^3.3.1",
         "react-native-dropdown-picker": "^3.0.5"
     },
     "plugin": {
